--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -7,14 +7,16 @@
         overflow: hidden;
 
         .imgContainer{
+            margin-top: 65px;
+            margin-left: 30px;
             width: 700px;
             height: 700px;
-            background-color: crimson;
+            background-color: rgb(220, 20, 153);
             border-radius: 50%;
             display: flex; 
-            align-items: left;
-            justify-content: center;
-            float: right;
+            // align-items: left;
+            // justify-content: center;
+            float: left;
 
             img{
                 height: 70%;
@@ -25,5 +27,61 @@
 
     .right{
         flex: 0.5;
+        position: relative;
+
+        .wrapper{
+            width: 100%;
+            height: 100%;
+            padding-left: 0px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+
+            h1{
+                font-size: 60px;
+                margin: 30px 0;
+            }
+
+            h2{
+                font-size: 35px;
+            }
+            h3{
+                font-size: 30px;
+
+                span {
+                    font-size: inherit;
+                    color:rgb(220, 20, 153);
+                }
+
+                .ityped-cursor {
+                    animation: blink 1s infinite;
+                }
+
+                @keyframes blink {
+                    50%{
+                        opacity: 1;
+                    }
+                    100% {
+                        opacity: 0;
+                    }
+                }
+            }
+        }
+        a{
+            position: absolute;
+            bottom: 10px; 
+            left: 50%;
+
+            img {
+                width: 50px;
+                animation: arrowBlink 2s infinite;
+            }
+
+            @keyframes arrowBlink {
+                100%{
+                    opacity: 0;
+                }
+            }
+        }
     }
 }
