--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -9,20 +9,16 @@
         .imgContainer{
             margin-top: 65px;
             margin-left: 30px;
-            width: 700px;
-            height: 700px;
+            width: 600px;
+            height: 600px;
             background-color: rgb(220, 20, 153);
             border-radius: 50%;
             display: flex; 
-            // align-items: left;
-            // justify-content: center;
-            float: left;
-
-            img{
-                height: 70%;
-            }
-
+            align-items: left;
+            justify-content: center;
+            float: center;
         }
+       
     }
 
     .right{
