--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -5,6 +5,25 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+
+    .arrow{
+        height: 50px;
+        position: absolute;
+        cursor: pointer;
+
+        &.left{
+            left: 100px;
+            
+        }
+
+        &.right{
+            right: 100px;
+            transform: rotateY(180deg);
+        }
+    }
+
+
 
     .slider{
         height: 350px;
