--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -24,12 +24,12 @@
     }
 
 
-
     .slider{
         height: 350px;
         display: flex;
         position: absolute;
         left: 0;
+        transition: all 1s ease-out;
 
         .container{
             width: 100vw;
@@ -68,6 +68,7 @@
                             background-color: rgb(245, 179, 155);
                             display: flex; 
                             align-items: center;
+                            justify-content: center;
 
                             img{
                                 width: 25px;
@@ -92,6 +93,15 @@
                 .right{
                     flex: 8;
                     height: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    overflow: hidden;
+
+                    img {
+                        width: 400px;
+                        transform: rotate(-10deg);
+                    }
                     
                 }
 
