--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -1,6 +1,13 @@
+@import "../../global.scss";
+
 .intro {
     background-color: white;
     display: flex;
+
+    @include mobile{
+        flex-direction: column;
+        align-items: center;
+    }
 
     .left{
         flex: 0.5;
@@ -17,6 +24,10 @@
             align-items: left;
             justify-content: center;
             float: center;
+
+            @include mobile{
+                align-items: flex-start;
+            }
         }
        
     }
@@ -33,9 +44,18 @@
             flex-direction: column;
             justify-content: center;
 
+            @include mobile{
+                padding-left: 0;
+                align-items: center;
+            }
+
             h1{
                 font-size: 60px;
                 margin: 30px 0;
+
+                @include mobile{
+                    font-size: 40px;
+                }
             }
 
             h2{
@@ -43,6 +63,10 @@
             }
             h3{
                 font-size: 30px;
+
+                @include mobile{
+                    font-size: 20px;
+                }
 
                 span {
                     font-size: inherit;
