--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,11 +1,16 @@
 @import "../../global.scss";
 
 .works { 
-    background-color: crimson;
+    background-color: rgb(14, 189, 233);
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
+
+    h1{
+        font-size: 50px;
+        margin-bottom: 450px;
+    }
 
     .arrow{
         height: 50px;
@@ -48,10 +53,10 @@
             justify-content: center;
 
             .item{
-                width: 700px;
+                width: 950px;
                 height: 100%;
                 background-color: white;
-                border-radius: 20px;
+                border-radius: 30px;
                 display: flex;
                 align-items: center;
                 justify-content: center;
@@ -64,8 +69,8 @@
                 }
 
                 .left{
-                    flex: 4;
-                    height: 80%;
+                    flex: 3.5;
+                    height: 100%;
                     display: flex;
                     align-items: center;
                     justify-content: center;
@@ -73,10 +78,10 @@
 
                     .leftContainer{
                         width: 90%;
-                        height: 70%;
+                        height: 90%;
                         display: flex;
                         flex-direction: column;
-                        justify-content: space-between;
+                        justify-content: space-around;
 
                         @include mobile {
                             width: 100%;
@@ -84,10 +89,10 @@
                         }
 
                         .imgContainer{
-                            width: 40px;
-                            height: 40px;
+                            width: 45px;
+                            height: 45px;
                             border-radius: 50%;
-                            background-color: rgb(245, 179, 155);
+                            background-color: rgb(220, 20, 137);
                             display: flex; 
                             align-items: center;
                             justify-content: center;
@@ -107,7 +112,7 @@
                         }
                     
                     h2{
-                        font-size: 20px;
+                        font-size: 30px;
 
                         @include mobile {
                             font-size: 13px;
@@ -130,7 +135,7 @@
             }
 
                 .right{
-                    flex: 8;
+                    flex: 2.5;
                     height: 100%;
                     display: flex;
                     align-items: center;
@@ -138,8 +143,10 @@
                     overflow: hidden;
 
                     img {
-                        width: 400px;
-                        transform: rotate(-10deg);
+                        height: 275px;
+                        width: 1000px;
+                        border-radius: 5%;
+                        // transform: rotate(-10deg);
                     }
                     
                 }
@@ -147,5 +154,16 @@
             }
 
         }
+    }
+
+    button{
+        width: 150px;
+        height: 30px;
+        color: black; 
+        background-color: rgb(220, 20, 137);
+        border: none;
+        border-radius: 10px;
+        font-weight: 500;
+        cursor: pointer;
     }
 }
