--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -10,14 +10,14 @@
     }
 
     .left{
-        flex: 0.5;
+        flex: 0.4;
         overflow: hidden;
 
         .imgContainer{
             margin-top: 65px;
-            margin-left: 30px;
-            width: 400px;
-            height: 400px;
+            margin-left: 40px;
+            width: 300px;
+            height: 300px;
             background-color: rgb(220, 20, 153);
             border-radius: 50%;
             display: flex; 
@@ -39,7 +39,7 @@
         .wrapper{
             width: 100%;
             height: 100%;
-            padding-left: 0px;
+            padding-left: -20px;
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -51,7 +51,7 @@
 
             h1{
                 font-size: 60px;
-                margin: 30px 0;
+                margin: 0px 0;
 
                 @include mobile{
                     font-size: 40px;
@@ -63,15 +63,16 @@
             }
             h3{
                 font-size: 30px;
+                color: rgb(220, 20, 153);
 
                 @include mobile{
                     font-size: 20px;
                 }
 
-                span {
-                    font-size: inherit;
-                    color:rgb(220, 20, 153);
-                }
+                // span {
+                //     font-size: inherit;
+                //     color:rgb(220, 20, 153);
+                // }
 
                 .ityped-cursor {
                     animation: blink 1s infinite;
