--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -33,14 +33,14 @@
     }
     
     .container{
-        width: 70%;
+        width: 60%;
         display: flex;
         align-items: center;
         justify-content: center; 
         flex-wrap: wrap;
 
         .item{
-            width: 220px;
+            width: 200px;
             height: 150px;
             border-radius: 20 px;
             border: 1px solid rgb(185, 211, 228); 
@@ -73,9 +73,26 @@
                     opacity: 0.2;
                     z-index: 0;
                 }
+                
             }
+            
 
         }
-        
     }
+    .right{
+        flex: 0.5;
+        position: relative;
+    
+        a{
+            position: absolute;
+            bottom: 10px; 
+            left: 50%;
+    
+            img {
+                width: 50px;
+                animation: arrowBlink 2s infinite;
+            }
+        }
+    }
+    
 }
