--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -7,9 +7,20 @@
     justify-content: center;
     position: relative;
 
+    a{
+        position: absolute;
+        margin-top: 375px; 
+        left: 50%;
+
+        img {
+            width: 50px;
+            animation: arrowBlink 2s infinite;
+        }
+    }
+   
     h1{
         font-size: 50px;
-        margin-bottom: 450px;
+        margin-bottom: 350px;
     }
 
     .arrow{
@@ -23,6 +34,7 @@
 
         &.left{
             left: 100px;
+            margin-right: 0px;
             
         }
 
@@ -34,7 +46,7 @@
 
 
     .slider{
-        height: 350px;
+        height: 300px;
         display: flex;
         position: absolute;
         left: 0;
@@ -53,7 +65,7 @@
             justify-content: center;
 
             .item{
-                width: 950px;
+                width: 800px;
                 height: 100%;
                 background-color: white;
                 border-radius: 30px;
@@ -143,27 +155,34 @@
                     overflow: hidden;
 
                     img {
-                        height: 275px;
+                        height: 250px;
                         width: 1000px;
                         border-radius: 5%;
                         // transform: rotate(-10deg);
                     }
+
+                    
+                    
                     
                 }
 
             }
+           
 
         }
+
+        // button{
+        //     width: 150px;
+        //     height: 30px;
+        //     color: black; 
+        //     background-color: rgb(220, 20, 137);
+        //     border: none;
+        //     border-radius: 10px;
+        //     font-weight: 500;
+        //     cursor: pointer;
+        // }
     }
 
-    button{
-        width: 150px;
-        height: 30px;
-        color: black; 
-        background-color: rgb(220, 20, 137);
-        border: none;
-        border-radius: 10px;
-        font-weight: 500;
-        cursor: pointer;
-    }
+    
+    
 }
