--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -7,6 +7,12 @@
     flex-direction: column;
     align-items: center;
 
+    .fa-trash,
+.fa-check {
+  pointer-events: none;
+  size: 4em;
+}
+
 
     h1{
         font-size: 50px;
