--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -20,7 +20,7 @@
    
     h1{
         font-size: 50px;
-        margin-bottom: 350px;
+        margin-bottom: 370px;
     }
 
     .arrow{
@@ -33,13 +33,13 @@
         }
 
         &.left{
-            left: 100px;
+            left: 25px;
             margin-right: 0px;
             
         }
 
         &.right{
-            right: 100px;
+            right: 25px;
             transform: rotateY(180deg);
         }
     }
@@ -124,14 +124,15 @@
                         }
                     
                     h2{
-                        font-size: 30px;
+                        font-size: 20px;
 
                         @include mobile {
-                            font-size: 13px;
+                            font-size: 12px;
                         }
                     }
                     p{
                         font-size: 13px; 
+                        padding-bottom: 50;
                         
                         @include mobile {
                             display: none;
@@ -156,8 +157,10 @@
 
                     img {
                         height: 250px;
-                        width: 1000px;
+                        width: 950px;
                         border-radius: 5%;
+                        margin-right: 40px;
+                        
                         // transform: rotate(-10deg);
                     }
 
@@ -165,24 +168,32 @@
                     
                     
                 }
+                
+            
 
             }
-           
+    
+            
 
         }
+        
 
-        // button{
-        //     width: 150px;
-        //     height: 30px;
-        //     color: black; 
-        //     background-color: rgb(220, 20, 137);
-        //     border: none;
-        //     border-radius: 10px;
-        //     font-weight: 500;
-        //     cursor: pointer;
-        // }
+        
+    }
+    button{
+        width: 150px;
+        height: 30px;
+        color: black; 
+        background-color: rgb(220, 20, 137);
+        border: none;
+        border-radius: 10px;
+        font-weight: 500;
+        cursor: pointer;
+
+        .inline{
+        display: inline-block;
+        }
+        
     }
 
-    
-    
 }
