--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -6,99 +6,21 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    .fa-trash,
-.fa-check {
-  pointer-events: none;
-  size: 4em;
-}
-
+    
 
     h1{
         font-size: 50px;
     }
 
-    ul{
-        margin: 10px;
-        padding: 0;
-        list-style: none;
-        display: flex;
+    .wrapper{
+        width: 800px;
+        margin: 40px auto;
+        
+    }
 
         li{
-            font-size: 12px;
-            margin-right: 50px;
-            padding: 7px; 
-            border-radius: 10px;
-            cursor: pointer;
-
-            &.active{
-                background-color: $mainColor;
-                color: white;
-            }
+            font-size: 30px;
+            padding: 10px;
         }
     }
-    
-    .container{
-        width: 60%;
-        display: flex;
-        align-items: center;
-        justify-content: center; 
-        flex-wrap: wrap;
 
-        .item{
-            width: 200px;
-            height: 150px;
-            border-radius: 20 px;
-            border: 1px solid rgb(185, 211, 228); 
-            margin: 10px 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            position: relative;
-            transition: all .5s ease;
-            cursor: pointer;
-
-
-            h3{
-                position: absolute;
-                font-size: 20px;
-            }
-
-            img{
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                z-index: 1;
-            }
-
-            &:hover{
-                background-color: $mainColor;
-
-                img{
-                    opacity: 0.2;
-                    z-index: 0;
-                }
-                
-            }
-            
-
-        }
-    }
-    .right{
-        flex: 0.5;
-        position: relative;
-    
-        a{
-            position: absolute;
-            bottom: 10px; 
-            left: 50%;
-    
-            img {
-                width: 50px;
-                animation: arrowBlink 2s infinite;
-            }
-        }
-    }
-    
-}
