--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -1,26 +1,47 @@
 @import "../../global.scss";
 
-.portfolio {
-    padding: 30px;
-    background-color: rgb(81, 210, 219);
+
+.portfolio { 
+    background-color: rgb(228, 152, 203);
     display: flex;
-    flex-direction: column;
-    align-items: center;
+
+
+.wrapper{
+    width: 800px;
+    margin: 20px auto;
+    margin-bottom: 20px;
+    padding: 30px;
+
     
-
     h1{
+        padding-left: 250px;
+        padding-bottom: 60px;
         font-size: 50px;
+        font-weight: 800;
     }
 
-    .wrapper{
-        width: 800px;
-        margin: 40px auto;
-        
+    img{
+        padding-left: 150px;
     }
 
-        li{
-            font-size: 30px;
-            padding: 10px;
-        }
+    p{
+        display: inline-block;
+        padding-left: 30px;
+        font-size: 25px;
+        font-weight: 600;
     }
+
+    
+}
+
+
+
+
+  
+}
+
+
+   
+  
+
 
