--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .works { 
-    background-color: rgb(134, 221, 243);
+    background-color: white;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,6 +12,7 @@
     h1{
         font-size: 50px;
         margin-bottom: 370px;
+        font-weight: 800;
     }
 
     .arrow{
@@ -115,7 +116,7 @@
                         }
                     
                     h2{
-                        font-size: 20px;
+                        font-size: 30px;
 
                         @include mobile {
                             font-size: 12px;
@@ -147,10 +148,10 @@
                     overflow: hidden;
 
                     img {
-                        height: 250px;
-                        width: 950px;
+                        height: 200px;
+                        width: 1000px;
                         border-radius: 5%;
-                        margin-right: 40px;
+                        margin-right: 20px;
                         
                     }
 
